# pdfmargins

./: .gitignore  Dockerfile  README.md  poetry.toml  pyproject.toml  shell.nix
pdfmargins/: add_margins.py  api.py  app.py  cli.py
scripts/: build_docker.sh  example_usage.sh  install.sh  push_docker.sh  start_server.sh  start_server_docker.sh  test.sh  try_curl.sh
test/: test_e2e.py  test_nothing.py
test/test_data/: .gitignore
